--- a/_config.yml
+++ b/_config.yml
@@ -26,7 +26,7 @@ author:
   avatar: "shamspias.jpeg"
   name: "Shamsuddin Ahmed"
   pronouns: # example: "she/her"
-  bio: "AI-focused software engineer who relearns the basics daily. Training models is easy, understanding how they truly work is the hard part. hard ya so hard 😂😭"
+  bio: "AI-focused software engineer who relearns the basics daily. Training models is easy, understanding how they truly work is the hard part."
   location: "Dhaka, Bangladesh"
   employer: "Indikat"
   #  uri: "https://shamspias.com"# URL
