--- a/_config.yml
+++ b/_config.yml
@@ -124,7 +124,7 @@ atom_feed:
 
 
 # SEO Related
-google_site_verification:
+google_site_verification: "diSQ9zh_R70CtxQU7msVVSb8q9LkhXelI1DrFmh42xI"
 bing_site_verification:
 alexa_site_verification:
 yandex_site_verification:
